# product-service/src/product/product.controller.ts
@@ -1,7 +1,9 @@
-import { Controller, Get, Param } from '@nestjs/common';
-import { ProductService } from './service/product.service';
+import { Body, Controller, Get, Param, Post } from '@nestjs/common';
+import { ProductService } from './product.service';
 import { Product } from './entities/product.entity';
-import { ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { ApiBody, ApiOperation, ApiResponse, ApiTags } from '@nestjs/swagger';
+import { ProductDto } from './dto/product.dto';
+import { CreateProductDto } from "./dto/create-product.dto";
 
 @ApiTags('Product')
 @Controller('products')
@@ -12,9 +14,9 @@ export class ProductController {
   @ApiResponse({
     status: 200,
     description: 'Successful operation',
-    type: [Product],
+    type: [ProductDto],
   })
-  async getProducts(): Promise<Product[]> {
+  async getProducts(): Promise<ProductDto[]> {
     return this.productService.getProducts();
   }
 
@@ -23,10 +25,28 @@ export class ProductController {
   @ApiResponse({
     status: 200,
     description: 'Successful operation',
-    type: Product,
+    type: ProductDto,
   })
   @ApiResponse({ status: 404, description: 'Product was not found' })
-  async getProductsById(@Param('id') id: string): Promise<Product> {
+  async getProductsById(@Param('id') id: string): Promise<ProductDto> {
     return this.productService.getProductsById(id);
+  }
+
+  @Post()
+  @ApiOperation({ summary: 'Add new Product' })
+  @ApiResponse({
+    status: 201,
+    description: 'Album is created',
+    type: ProductDto,
+  })
+  @ApiResponse({
+    status: 400,
+    description: 'Bad request. body does not contain required fields',
+  })
+  @ApiBody({ type: CreateProductDto })
+  async createProduct(
+    @Body() createProductDto: CreateProductDto,
+  ): Promise<ProductDto> {
+    return this.productService.createProduct(createProductDto);
   }
 }
